feat(ui): adds ui side of download for stately-files
